# deploy-bot

./: .env.example  .gitignore  README.md  pyproject.toml
deploy_bot/: __main__.py  auth.py  config.py  exception.py
templates/: unit.service
